[package]
name = "mosaic-id"
version = "0.1.0"
edition = "2024"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Command line tool for mosaic ID management"
keywords = [ "mosaic" ]
license = "MIT"

[dependencies]
colorful = "0.3"
dirs = "6.0"
mosaic-core = { git = "https://github.com/mikedilger/mosaic-core", branch = "master" }
rpassword = "7.4"
zeroize = "1.8"
