[package]
name = "mosaic-id"
version = "0.1.0"
edition = "2024"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Command line tool for mosaic ID management"
keywords = [ "mosaic" ]
license = "MIT"

[dependencies]
colorful = "0.3"
dialoguer = "0.12"
dirs = "6.0"
mosaic-core = { git = "https://github.com/mikedilger/mosaic-core", branch = "master", features = [ "serde" ] }
rpassword = "7.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
zeroize = "1.8"
